--- a/Ix.NET/Source/System.Interactive.Async/System.Interactive.Async.csproj
+++ b/Ix.NET/Source/System.Interactive.Async/System.Interactive.Async.csproj
@@ -12,6 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="MinMax.Generated.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>MinMax.Generated.tt</DependentUpon>
+    </None>
     <None Include="Sum.Generated.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -20,6 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="MinMax.Generated.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>MinMax.Generated.cs</LastGenOutput>
+    </None>
     <None Update="Sum.Generated.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Sum.Generated.cs</LastGenOutput>
@@ -31,6 +40,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="MinMax.Generated.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>MinMax.Generated.tt</DependentUpon>
+    </Compile>
     <Compile Update="Sum.Generated.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
