--- a/AsyncRx.NET/System.Reactive.Async/System.Reactive.Async.csproj
+++ b/AsyncRx.NET/System.Reactive.Async/System.Reactive.Async.csproj
@@ -9,25 +9,25 @@
       <LastGenOutput>Average.Generated.cs</LastGenOutput>
       <Generator>TextTemplatingFileGenerator</Generator>
     </None>
-    <None Update="System\Reactive\Linq\Operators\Zip.Generated.tt">
-      <LastGenOutput>Zip.Generated.cs</LastGenOutput>
-      <Generator>TextTemplatingFileGenerator</Generator>
-    </None>
     <None Update="System\Reactive\Linq\Operators\CombineLatest.Generated.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>CombineLatest.Generated.cs</LastGenOutput>
-    </None>
-    <None Update="System\Reactive\Linq\Operators\Sum.Generated.tt">
-      <LastGenOutput>Sum.Generated.cs</LastGenOutput>
       <Generator>TextTemplatingFileGenerator</Generator>
     </None>
     <None Update="System\Reactive\Linq\Operators\Min.Generated.tt">
-      <LastGenOutput>Min - Copy.Generated.cs</LastGenOutput>
+      <LastGenOutput>Min.Generated.cs</LastGenOutput>
       <Generator>TextTemplatingFileGenerator</Generator>
     </None>
     <None Update="System\Reactive\Linq\Operators\Max.Generated.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Max.Generated.cs</LastGenOutput>
+    </None>
+    <None Update="System\Reactive\Linq\Operators\Sum.Generated.tt">
+      <LastGenOutput>Sum.Generated.cs</LastGenOutput>
+      <Generator>TextTemplatingFileGenerator</Generator>
+    </None>
+    <None Update="System\Reactive\Linq\Operators\Zip.Generated.tt">
+      <LastGenOutput>Zip.Generated.cs</LastGenOutput>
+      <Generator>TextTemplatingFileGenerator</Generator>
     </None>
   </ItemGroup>
 
@@ -46,35 +46,20 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>CombineLatest.Generated.tt</DependentUpon>
     </Compile>
-    <Compile Update="System\Reactive\Linq\Operators\Max - Copy - Copy.Generated.cs">
-      <DependentUpon>Sum.Generated.tt</DependentUpon>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
     <Compile Update="System\Reactive\Linq\Operators\Max.Generated.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Max.Generated.tt</DependentUpon>
     </Compile>
-    <Compile Update="System\Reactive\Linq\Operators\Sum.Generated.cs">
-      <DependentUpon>Max - Copy.Generated.tt</DependentUpon>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Update="System\Reactive\Linq\Operators\Sum.Generated.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Sum.Generated.tt</DependentUpon>
-    </Compile>
-    <Compile Update="System\Reactive\Linq\Operators\Min - Copy.Generated.cs">
-      <DependentUpon>Min - Copy.Generated.tt</DependentUpon>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Update="System\Reactive\Linq\Operators\Min - Copy.Generated.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
+    <Compile Update="System\Reactive\Linq\Operators\Min.Generated.cs">
       <DependentUpon>Min.Generated.tt</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+    <Compile Update="System\Reactive\Linq\Operators\Sum.Generated.cs">
+      <DependentUpon>Sum.Generated.tt</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
     </Compile>
     <Compile Update="System\Reactive\Linq\Operators\Zip.Generated.cs">
       <DesignTime>True</DesignTime>
