--- a/AsyncRx.NET/System.Reactive.Async/System.Reactive.Async.csproj
+++ b/AsyncRx.NET/System.Reactive.Async/System.Reactive.Async.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\System.Reactive.Async.Interfaces\System.Reactive.Async.Interfaces.csproj" />
     <ProjectReference Include="..\System.Reactive.Shared\System.Reactive.Shared.csproj" />
   </ItemGroup>
 
