Moving disposables to System.Reactive.Async.Disposables.

--- a/AsyncRx.NET/System.Reactive.Async/System.Reactive.Async.csproj
+++ b/AsyncRx.NET/System.Reactive.Async/System.Reactive.Async.csproj
@@ -13,7 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\System.Reactive.Async.Disposables\System.Reactive.Async.Disposables.csproj" />
     <ProjectReference Include="..\System.Reactive.Async.Interfaces\System.Reactive.Async.Interfaces.csproj" />
+    <ProjectReference Include="..\System.Reactive.Bcl\System.Reactive.Bcl.csproj" />
     <ProjectReference Include="..\System.Reactive.Shared\System.Reactive.Shared.csproj" />
   </ItemGroup>
 
