--- a/AsyncRx.NET/System.Reactive.Async.Disposables/System.Reactive.Async.Disposables.csproj
+++ b/AsyncRx.NET/System.Reactive.Async.Disposables/System.Reactive.Async.Disposables.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\System.Reactive.Async.Interfaces\System.Reactive.Async.Interfaces.csproj" />
+    <ProjectReference Include="..\System.Reactive.Bcl\System.Reactive.Bcl.csproj" />
+  </ItemGroup>
+
 </Project>
