--- a/AsyncRx.NET/System.Reactive.Async/System.Reactive.Async.csproj
+++ b/AsyncRx.NET/System.Reactive.Async/System.Reactive.Async.csproj
@@ -5,93 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="System\Reactive\Linq\Operators\FromAsyncPattern.Generated.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>FromAsyncPattern.Generated.tt</DependentUpon>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\System.Reactive.Async.Concurrency\System.Reactive.Async.Concurrency.csproj" />
     <ProjectReference Include="..\System.Reactive.Async.Disposables\System.Reactive.Async.Disposables.csproj" />
     <ProjectReference Include="..\System.Reactive.Async.Interfaces\System.Reactive.Async.Interfaces.csproj" />
+    <ProjectReference Include="..\System.Reactive.Async.Linq\System.Reactive.Async.Linq.csproj" />
     <ProjectReference Include="..\System.Reactive.Async.Subjects\System.Reactive.Async.Subjects.csproj" />
     <ProjectReference Include="..\System.Reactive.Bcl\System.Reactive.Bcl.csproj" />
     <ProjectReference Include="..\System.Reactive.Shared\System.Reactive.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="System\Reactive\Linq\Operators\Average.Generated.tt">
-      <LastGenOutput>Average.Generated.cs</LastGenOutput>
-      <Generator>TextTemplatingFileGenerator</Generator>
-    </None>
-    <None Update="System\Reactive\Linq\Operators\CombineLatest.Generated.tt">
-      <LastGenOutput>CombineLatest.Generated.cs</LastGenOutput>
-      <Generator>TextTemplatingFileGenerator</Generator>
-    </None>
-    <None Update="System\Reactive\Linq\Operators\FromAsyncPattern.Generated.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>FromAsyncPattern.Generated.cs</LastGenOutput>
-    </None>
-    <None Update="System\Reactive\Linq\Operators\Min.Generated.tt">
-      <LastGenOutput>Min.Generated.cs</LastGenOutput>
-      <Generator>TextTemplatingFileGenerator</Generator>
-    </None>
-    <None Update="System\Reactive\Linq\Operators\Max.Generated.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Max.Generated.cs</LastGenOutput>
-    </None>
-    <None Update="System\Reactive\Linq\Operators\Sum.Generated.tt">
-      <LastGenOutput>Sum.Generated.cs</LastGenOutput>
-      <Generator>TextTemplatingFileGenerator</Generator>
-    </None>
-    <None Update="System\Reactive\Linq\Operators\Zip.Generated.tt">
-      <LastGenOutput>Zip.Generated.cs</LastGenOutput>
-      <Generator>TextTemplatingFileGenerator</Generator>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="System\Reactive\Linq\Operators\Average.Generated.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Average.Generated.tt</DependentUpon>
-    </Compile>
-    <Compile Update="System\Reactive\Linq\Operators\CombineLatest.Generated.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>CombineLatest.Generated.tt</DependentUpon>
-    </Compile>
-    <Compile Update="System\Reactive\Linq\Operators\FromAsyncPattern.Generated.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>FromAsyncPattern.Generated.tt</DependentUpon>
-    </Compile>
-    <Compile Update="System\Reactive\Linq\Operators\Max.Generated.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Max.Generated.tt</DependentUpon>
-    </Compile>
-    <Compile Update="System\Reactive\Linq\Operators\Min.Generated.cs">
-      <DependentUpon>Min.Generated.tt</DependentUpon>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Update="System\Reactive\Linq\Operators\Sum.Generated.cs">
-      <DependentUpon>Sum.Generated.tt</DependentUpon>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Update="System\Reactive\Linq\Operators\Zip.Generated.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Zip.Generated.tt</DependentUpon>
-    </Compile>
   </ItemGroup>
 
 </Project>
