--- a/AsyncRx.NET/System.Reactive.Shared/System.Reactive.Shared.csproj
+++ b/AsyncRx.NET/System.Reactive.Shared/System.Reactive.Shared.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\System.Reactive.Async.Interfaces\System.Reactive.Async.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
