Moving some functionality to System.Reactive.Async.Core.

--- a/AsyncRx.NET/System.Reactive.Async.Core/System.Reactive.Async.Core.csproj
+++ b/AsyncRx.NET/System.Reactive.Async.Core/System.Reactive.Async.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\System.Reactive.Async.Disposables\System.Reactive.Async.Disposables.csproj" />
     <ProjectReference Include="..\System.Reactive.Async.Interfaces\System.Reactive.Async.Interfaces.csproj" />
     <ProjectReference Include="..\System.Reactive.Bcl\System.Reactive.Bcl.csproj" />
   </ItemGroup>
