--- a/Rx.NET/Source/src/System.Reactive/System.Reactive.csproj
+++ b/Rx.NET/Source/src/System.Reactive/System.Reactive.csproj
@@ -6,6 +6,9 @@
     <Description>Reactive Extensions (Rx) for .NET</Description>
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net45|AnyCPU'">
+    <DocumentationFile>bin\Debug\net45\System.Reactive.xml</DocumentationFile>
+  </PropertyGroup>
 
 
   <ItemGroup>    
