bring back standalone System.Reactive.Interfaces package (#418)
* ignore some noise

* move interfaces out to System.Reactive.Interfaces

* remove typeforwarders

* invert the project references

* add assembly info

* unify AssemblyInfo files

* re-add properties linking to new source

* update xunit to stable version

* pack the package

* update packages

* use stable dotcover

* remove files

* use dotnet test

* just test

* split restore

* restore

* add binlog

* Add interfaces to uwp test project

* Update package versions

* workaround

* test

* add vsts yml

* update xunit

* latest extras

* no restore

* build

* build script

* fix merge issue

--- a/Rx.Net/Source/src/System.Reactive.Interfaces/System.Reactive.Interfaces.csproj
+++ b/Rx.Net/Source/src/System.Reactive.Interfaces/System.Reactive.Interfaces.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\System.Reactive\System.Reactive.csproj" />
+    <Compile Include="..\AssemblyInfo.cs" Link="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-
+  
 </Project>
