Add public API approval tests for Rx.NET

--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,7 @@ stylecop.*
 *.lock.json
 artifacts/
 Generated_Code #added for RIA/Silverlight projects
+ApiApprovalTests.*.received.txt
 
 # Backup & report files from converting an old project file to a newer
 # Visual Studio version. Backup files are not needed, because we have git ;-)
